[project]
name = "medialink"
version = "0.1.0"
description = "通过创建链接整理媒体库的工具"
authors = [
    {name = "XiaoDeng3386", email = "1744793737@qq.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "guessit>=3.8.0",
    "rich>=13.0.0",
]

[project.scripts]
medialink = "medialink.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
